--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "promptDelete": true,
+  "promptDelete": false,
   "alwaysUpdateLinks": true,
   "showLineNumber": true,
   "trashOption": "none",
